# bachelor-thesis

./: README.md
AndroidStudio/CSC_nRF5340/app/: build.gradle  proguard-rules.pro
AndroidStudio/CSC_nRF5340/app/src/main/: AndroidManifest.xml
AndroidStudio/CSC_nRF5340/app/src/main/java/no/nordicsemi/android/csc/: CSCActivity.java  CSCApplication.java  ScannerActivity.java  SplashScreenActivity.java
AndroidStudio/CSC_nRF5340/app/src/main/java/no/nordicsemi/android/csc/adapter/: DeviceDiffCallback.java  DevicesAdapter.java  DiscoveredBluetoothDevice.java
AndroidStudio/CSC_nRF5340/app/src/main/java/no/nordicsemi/android/csc/profile/: CSCManager.java
AndroidStudio/CSC_nRF5340/app/src/main/java/no/nordicsemi/android/csc/utils/: Utils.java
AndroidStudio/CSC_nRF5340/app/src/main/java/no/nordicsemi/android/csc/viewmodels/: CSCViewModel.java  (+4 more)
AndroidStudio/CSC_nRF5340/app/src/main/res/drawable-anydpi/: battery_alert_icon.xml  battery_unknown_icon.xml  bicycle_2.xml  ic_action_diameter.xml  ic_action_distance.xml  ic_action_speed.xml
AndroidStudio/CSC_nRF5340/app/src/main/res/layout/: activity_csc.xml  activity_scanner.xml  activity_splash_screen.xml  device_item.xml  info_no_devices.xml
AndroidStudio/CSC_nRF5340/app/src/main/res/values/: dimens.xml  strings.xml
nRF5340_code/: CMakeLists.txt  PerCen.code-workspace  prj.conf  prj_minimal.conf  prj_minimal.conf.ori
nRF5340_code/src/: BatteryManager.c  BatteryManager.cpp  BatteryManager.h  Data.cpp  Data.h  dataCSC.cpp  dataCSC.h  dataService.cpp  dataService.h  deviceManager.cpp  deviceManager.h  main.cpp
(+4 files in other folders)
